--- a/JS/Angular/Battisti/moments/src/app/components/pages/newmoment/newmoment.component.html
+++ b/JS/Angular/Battisti/moments/src/app/components/pages/newmoment/newmoment.component.html
@@ -1,1 +1,2 @@
-<p>newmoment works!</p>
+<h2>Compartilhe o seu <span>Momento</span></h2>
+<app-moment-form [btnText]="btnText" (onSubmit)="createHandler($event)"></app-moment-form>
